--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "cors": "^2.8.5",
       "express": "^4.17.1",
+      "morgan": "^1.10.0",
+      "mysql": "^2.14.1",
       "mysql2": "^2.2.5",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.31",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.31"
    },
    "devDependencies": {
+      "@types/cors": "^2.8.9",
       "@types/express": "^4.17.8",
       "@types/node": "^8.0.29",
       "@typescript-eslint/eslint-plugin": "^4.15.0",
@@ -27,7 +30,7 @@
       "eslint-config-prettier": "^7.2.0",
       "eslint-plugin-prettier": "^3.3.1",
       "prettier": "^2.2.1",
-      "ts-node": "3.3.0",
+      "ts-node": "^3.3.0",
       "ts-node-dev": "^1.0.0",
       "typescript": "3.3.3333"
    }
